--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
 
         <div id="center-wrapper">
-            <h1>Unlimited movies, TV shows, and more.</h1>
+            <h1>Full fun or full refund.</h1>
             <h2 class="font-light">Watch anywhere. Cancel anytime.</h2>
 
             <div class="form-wrapper">
